[gd_scene load_steps=4 format=3 uid="uid://bd7yqjyx5bo82"]

[ext_resource type="Script" path="res://scripts/ChallengeProgressButton.gd" id="1_8uqba"]
[ext_resource type="Texture2D" uid="uid://cciuavpguq06w" path="res://assets/icons/tier_1.png" id="2_etjtr"]
[ext_resource type="FontFile" uid="uid://cxfqy12gmgcfg" path="res://assets/fonts/ApercuMonoProRegular.ttf" id="3_nv2mm"]

[node name="ChallengeProgressButton" type="Control"]
custom_minimum_size = Vector2(790, 90)
layout_mode = 3
anchors_preset = 0
offset_right = 790.0
offset_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8uqba")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(790, 90)
layout_mode = 0
offset_right = 790.0
offset_bottom = 90.0

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer"]
custom_minimum_size = Vector2(790, 90)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="TierIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
offset_left = -15.0
offset_top = -15.0
offset_right = 105.0
offset_bottom = 105.0
texture = ExtResource("2_etjtr")
expand_mode = 1
stretch_mode = 4

[node name="PointsLabel" type="Label" parent="."]
custom_minimum_size = Vector2(790, 90)
layout_mode = 0
offset_right = 790.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("3_nv2mm")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
